--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2025-03-03 Version: v3.0.1
+- Update API BackflowFeatureConsistencyCheckJobData: update param body.
+
+
 2025-02-28 Version: v3.0.0
 - Support API CheckTrafficControlTaskExpression.
 - Support API QueryTrafficControlTargetItemReportDetail.
